--- a/index.html
+++ b/index.html
@@ -51,23 +51,73 @@
     </script>
 
 </head>
-<body ng-controller="ItemManager">
+<!--<body ng-controller="ItemManager">-->
 
-<div id="tianLogShower" style="height: 1px">
+<!--<div id="tianLogShower" style="height: 1px">-->
+<!--</div>-->
+
+    <!--<div ng-include="'./view/' + showerUrl + '.html'"></div>-->
+
+
+    <!--<script src="./js/angular.js"></script>-->
+    <!--<script src="js/directive.js"></script>-->
+    <!--<script src="js/controllers.js"></script>-->
+    <!--<script src="js/services.js"> </script>-->
+
+    <!--<script type="text/javascript">-->
+
+        <!--var module = angular.module("displayitem",["displayitem.service","displayitem.directive"]);-->
+    <!--</script>-->
+
+<!--</body>-->
+
+<body>
+<div class="container">
+    <h1>Hello world!</h1>
+    <div class="row">
+
+        <div id="banner" class="span12">
+            <!-- Photo by Jake Sutton
+            http://www.flickr.com/photos/44124405407@N01/510899838 -->
+            <img src="img/sky-slim.jpg">
+        </div>
+    </div>
+    <div class="row">
+        <div id="main-content" class="span8">
+            <p>Humpts dumptus in muro sedet
+            </p>
+            <p>Veni vidi vici
+            </p>
+            <p>Alea iacta est
+            </p>
+            <hr>
+        </div>
+        <div class="span4">
+            <div class="widget-title">One</div>
+            <div class="widget-text">
+                The quick brown fox jumps...
+            </div>
+            <div class="widget-content">
+                <div class="widget-title">Two</div>
+                <div class="widget-text">
+                    Over the lazy dog...
+                </div>
+            </div>
+            <div class="widget-content">
+                <div class="widget-title">Three</div>
+                <div class="widget-text">
+                    To get to the other side
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div id="footer" class="span12">
+            &copy; Nobody! This document is placed in the public domain.
+        </div>
+    </div>
 </div>
-
-    <div ng-include="'./view/' + showerUrl + '.html'"></div>
-
-
-    <script src="./js/angular.js"></script>
-    <script src="js/directive.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"> </script>
-
-    <script type="text/javascript">
-
-        var module = angular.module("displayitem",["displayitem.service","displayitem.directive"]);
-    </script>
-
+<script src="http://code.jquery.com/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
