--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
         <!--<link  type="text/css" href="./css/type_single.css" rel="stylesheet"/>-->
         <!--<link type="text/css" href="./css/sample_quizzes.css" rel="stylesheet">-->
     <link rel="stylesheet" href="./css/jquery-ui.css">
+    <link rel="stylesheet" href="./css/lediaocha.css">
 
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
     <script src="./js/jquery-1.11.1.js"></script>
 
-    <!-- 新 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!--&lt;!&ndash; 新 Bootstrap 核心 CSS 文件 &ndash;&gt;-->
+    <!--<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
 
-    <!-- 可选的Bootstrap主题文件（一般不用引入） -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <!--&lt;!&ndash; 可选的Bootstrap主题文件（一般不用引入） &ndash;&gt;-->
+    <!--<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">-->
 
-    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-    <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+    <!--&lt;!&ndash; jQuery文件。务必在bootstrap.min.js 之前引入 &ndash;&gt;-->
+    <!--<script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>-->
 
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="http://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <!--&lt;!&ndash; 最新的 Bootstrap 核心 JavaScript 文件 &ndash;&gt;-->
+    <!--<script src="http://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>-->
 
 
 
@@ -51,73 +52,24 @@
     </script>
 
 </head>
-<!--<body ng-controller="ItemManager">-->
+<body ng-controller="ItemManager">
 
-<!--<div id="tianLogShower" style="height: 1px">-->
-<!--</div>-->
-
-    <!--<div ng-include="'./view/' + showerUrl + '.html'"></div>-->
-
-
-    <!--<script src="./js/angular.js"></script>-->
-    <!--<script src="js/directive.js"></script>-->
-    <!--<script src="js/controllers.js"></script>-->
-    <!--<script src="js/services.js"> </script>-->
-
-    <!--<script type="text/javascript">-->
-
-        <!--var module = angular.module("displayitem",["displayitem.service","displayitem.directive"]);-->
-    <!--</script>-->
-
-<!--</body>-->
-
-<body>
-<div class="container">
-    <h1>Hello world!</h1>
-    <div class="row">
-
-        <div id="banner" class="span12">
-            <!-- Photo by Jake Sutton
-            http://www.flickr.com/photos/44124405407@N01/510899838 -->
-            <img src="img/sky-slim.jpg">
-        </div>
-    </div>
-    <div class="row">
-        <div id="main-content" class="span8">
-            <p>Humpts dumptus in muro sedet
-            </p>
-            <p>Veni vidi vici
-            </p>
-            <p>Alea iacta est
-            </p>
-            <hr>
-        </div>
-        <div class="span4">
-            <div class="widget-title">One</div>
-            <div class="widget-text">
-                The quick brown fox jumps...
-            </div>
-            <div class="widget-content">
-                <div class="widget-title">Two</div>
-                <div class="widget-text">
-                    Over the lazy dog...
-                </div>
-            </div>
-            <div class="widget-content">
-                <div class="widget-title">Three</div>
-                <div class="widget-text">
-                    To get to the other side
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div id="footer" class="span12">
-            &copy; Nobody! This document is placed in the public domain.
-        </div>
-    </div>
+<div id="tianLogShower" style="height: 1px">
 </div>
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+
+    <div ng-include="'./view/' + showerUrl + '.html'"></div>
+
+
+    <script src="./js/angular.js"></script>
+    <script src="js/directive.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"> </script>
+
+    <script type="text/javascript">
+
+        var module = angular.module("displayitem",["displayitem.service","displayitem.directive"]);
+    </script>
+
 </body>
+
 </html>
