--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
         <!--<link  type="text/css" href="./css/type_single.css" rel="stylesheet"/>-->
         <!--<link type="text/css" href="./css/sample_quizzes.css" rel="stylesheet">-->
-    <link rel="stylesheet" href="./css/jquery-ui.css">
+    <!--<link rel="stylesheet" href="./css/jquery-ui.css">-->
     <link rel="stylesheet" href="./css/lediaocha.css">
 
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
+    <!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">-->
     <script src="./js/jquery-1.11.1.js"></script>
 
     <!--&lt;!&ndash; 新 Bootstrap 核心 CSS 文件 &ndash;&gt;-->
