--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html ng-app="displayitem">
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
 <head>
         <!--<link  type="text/css" href="./css/type_single.css" rel="stylesheet"/>-->
         <!--<link type="text/css" href="./css/sample_quizzes.css" rel="stylesheet">-->
