--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html ng-app="displayitem">
+<title>性格优势测试</title>
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
 <head>
         <!--<link  type="text/css" href="./css/type_single.css" rel="stylesheet"/>-->
@@ -59,7 +60,6 @@
 </div>
 
     <div ng-include="'./view/' + showerUrl + '.html'"></div>
-
 
     <script src="./js/angular.js"></script>
     <script src="js/directive.js"></script>
