--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">-->
     <script src="./js/jquery-1.11.1.js"></script>
+    <script src="./js/underscore.js"></script>
 
     <!--&lt;!&ndash; 新 Bootstrap 核心 CSS 文件 &ndash;&gt;-->
     <!--<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
