--- a/backend/index.html
+++ b/backend/index.html
@@ -16,24 +16,9 @@
     <link rel="stylesheet" type="text/css" href="assets/css/bootmetro-responsive.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootmetro-icons.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootmetro-ui-light.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/datepicker.css">
-    <!--<link rel="stylesheet" type="text/css" href="assets/css/icomoon.css">-->
 
     <!--  these two css are to use only for documentation -->
     <link rel="stylesheet" type="text/css" href="assets/css/demo.css">
-
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-
-    <!-- All JavaScript at the bottom, except for Modernizr and Respond.
-       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
-       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-    <script src="assets/js/modernizr-2.6.2.min.js"></script>
-
 
 </head>
 
@@ -73,6 +58,7 @@
         <div class="row-fluid">
             <div class="metro span12">
                 <div class="metro-sections">
+                    <div id="section0" class="metro-section tile-span-4"></div>
                     <div id="section1" class="metro-section tile-span-4">
                         <a class="tile app wide bg-color-yellow" href="#">
                             <div class="image-wrapper">
@@ -92,44 +78,47 @@
                             </div>
                             <div class="app-label">聊天师</div>
                         </a>
-
+                    </div>
+                    <div id="section2" class="metro-section tile-span-4">
                         <!-- 第二行 -->
-                        <a class="tile app wide bg-color-gray" href="./charms-demo.html">
+                        <a class="tile app wide bg-color-gray" href="#">
                             <div class="image-wrapper">
                                 <img src="assets/img/RegEdit.png" alt="">
                             </div>
                             <span class="app-label">智能Q&A</span>
                         </a>
 
-                        <a class="tile app bg-color-blueDark" href="./icons.html">
+                        <a class="tile app bg-color-blueDark" href="#">
                             <div class="image-wrapper">
                                 <span class="icon icon-IcoMoon" ></span>
                             </div>
                             <span class="app-label">科学测验</span>
                         </a>
 
-                        <a class="tile app wide bg-color-red" href="./charms-demo.html">
+                        <a class="tile app wide bg-color-red" href="#">
                             <div class="image-wrapper">
                                 <span class="icon icon-settings"></span>
                             </div>
                             <span class="app-label">个人信息</span>
                         </a>
 
+                    </div>
+                    <div id="section3" class="metro-section tile-span-4">
                         <!-- 第三行 -->
-                        <a class="tile app bg-color-pink" href="./charms-demo.html">
+                        <a class="tile app bg-color-pink" href="#">
                             <div class="image-wrapper">
                                 <span class="icon icon-publish"></span>
                             </div>
                             <span class="app-label">创意推广</span>
                         </a>
 
-                        <a class="tile app wide bg-color-green" href="./icons.html">
+                        <a class="tile app wide bg-color-green" href="#">
                             <div class="image-wrapper">
                                 <span class="icon icon-search" ></span>
                             </div>
                             <span class="app-label">培训研究</span>
                         </a>
-                        <a class="tile app wide bg-color-grayLight" href="./icons.html">
+                        <a class="tile app wide bg-color-grayLight" href="#">
                             <div class="image-wrapper">
                                 <span class="icon icon-database" ></span>
                             </div>
@@ -144,32 +133,8 @@
 </div>
 
 <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="assets/js/bootmetro-panorama.js"></script>
-<script type="text/javascript" src="assets/js/bootmetro-pivot.js"></script>
-<script type="text/javascript" src="assets/js/bootmetro-charms.js"></script>
-<script type="text/javascript" src="assets/js/bootstrap-datepicker.js"></script>
-
-<script type="text/javascript" src="assets/js/jquery.mousewheel.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery.touchSwipe.min.js"></script>
-
-<script type="text/javascript" src="assets/js/holder.js"></script>
-<!--<script type="text/javascript" src="assets/js/perfect-scrollbar.with-mousewheel.min.js"></script>-->
-<script type="text/javascript" src="assets/js/demo.js"></script>
 
 
-<script type="text/javascript">
 
-    $('.panorama').panorama({
-        //nicescroll: false,
-        showscrollbuttons: true,
-        keyboard: true,
-        parallax: true
-    });
-
-    //      $(".panorama").perfectScrollbar();
-
-    $('#pivot').pivot();
-
-</script>
 </body>
 </html>
