--- a/backend/index.html
+++ b/backend/index.html
@@ -10,7 +10,7 @@
     <!-- Mobile viewport optimized: h5bp.com/viewport -->
     <meta name="viewport" content="width=device-width">
 
-    <title>BootMetro Demo - Metro</title>
+    <title>后台管理系统--幸福创客</title></title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootmetro.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootmetro-responsive.css">
