--- a/haha.html
+++ b/haha.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-<p>测试Active文本</p>
+<p>测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本</p>
 </body>
 <script>
     var p=document.getElementsByTagName('p');
