--- a/haha.html
+++ b/haha.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         p {
-            color: yellow;
+            color: yellow;font-size: 30px;
         }
         p:active {
             color: red;
