--- a/haha.html
+++ b/haha.html
@@ -14,7 +14,8 @@
 <p>测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本测试Active文本</p>
 </body>
 <script>
-    var p=document.getElementsByTagName('p');
+//    var p=document.getElementsByTagName('p');
+    var p = document.getElementsByClassName('btn')
     for(var i=0;i<p.length;i++){
         p[i].addEventListener('touchstart',function(){},false);
     };
