--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
     </script>
 
 
+    <script>
+//        var p=document.getElementsByTagName('div');
+        var p = document.getElementsByClassName('btn');
+        for(var i=0;i<p.length;i++){
+            p[i].addEventListener('touchstart',function(){},false);
+        };
+    </script>
+
+
 </head>
 <body ng-controller="ItemManager">
 
