--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     </script>
 
 
-    <!--<script>-->
-<!--//        var p=document.getElementsByTagName('div');-->
-        <!--var p = document.getElementsByClassName('btn');-->
-        <!--for(var i=0;i<p.length;i++){-->
-            <!--p[i].addEventListener('touchstart',function(){},false);-->
-        <!--};-->
-    <!--</script>-->
+    <script>
+//        var p=document.getElementsByTagName('div');
+        var p = document.getElementsByClassName('tian_click');
+        for(var i=0;i<p.length;i++){
+            p[i].addEventListener('touchstart',function(){},false);
+        };
+    </script>
 
 
 </head>
