--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
 </head>
-<body ng-controller="ItemManager">
+<body ng-controller="ItemManager"  ontouchstart="">
 
 <div id="tianLogShower" style="height: 1px">
 </div>
