--- a/backend/index.html
+++ b/backend/index.html
@@ -70,7 +70,7 @@
                             <div class="image-wrapper">
                                 <span class="icon icon-list-2"></span>
                             </div>
-                            <span class="app-label">创客说</span>
+                            <span class="app-label">创客汇</span>
                         </a>
                         <a class="tile wide bg-color-greenDark" href="#">
                             <div class="image-wrapper">
