--- a/mobile/index.html
+++ b/mobile/index.html
@@ -100,7 +100,7 @@
         </div>
         <div class="kv">
             <div class="ui-body-e">
-                <a href="#"><!--  -->
+                <a href="./about.html"><!--  -->
                     <img alt="kv" class="img-responsive"
                          src="./image/five.png"/>
 
@@ -166,7 +166,7 @@
                 </h2>
             </li>
         </ul>
-       
+
     </div>
 </div>
 <script type="text/javascript">(function () {
