--- a/mobile/index.html
+++ b/mobile/index.html
@@ -3,7 +3,7 @@
 <head>
     <script type="text/javascript">var NREUMQ = NREUMQ || [];
     NREUMQ.push(["mark", "firstbyte", new Date().getTime()]);</script>
-    <title>首页 - 幸福创客</title>
+    <title>幸福VIP订制 - 幸福创客</title>
     <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
           name="description"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
@@ -73,7 +73,7 @@
         </div>
         <div class="kv">
             <div class="ui-body-e">
-                <a href="#"><!--  -->
+                <a href="./custommade.html"><!--  -->
                     <img alt="kv" class="img-responsive"
                          src="./image/second.png"/>
 
@@ -123,14 +123,12 @@
             <h2>分享给好友</h2>
             <ul class="share-list">
                 <li><a class="share-icon"
-                       data-description="DJI，全球无人机控制与航拍影像系统先驱，逐步推出了Phantom 2 vision+、S1000等全球领先的无人机设备，现在到DJI商城首次购买成功，还可获得价值订单总额2%的DJI币。"
-                       data-img="//dn-djistore.qbox.me/assets/cn/mobile/invitation-poster-cn-ca313db9277b77e05ca7d43f5cc5d2d4.jpg"
-                       data-platform="weibo" data-title="" data-type="weibo" data-url="http://m.dji.com/cn"><i
+                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-platform="weibo" data-title="" data-type="weibo" data-url="http://winnovator.com"><i
                         class="icon-weibo">Weibo</i></a></li>
                 <li><a class="share-icon"
-                       data-description="DJI，全球无人机控制与航拍影像系统先驱，逐步推出了Phantom 2 vision+、S1000等全球领先的无人机设备，现在到DJI商城首次购买成功，还可获得价值订单总额2%的DJI币。"
-                       data-img="//dn-djistore.qbox.me/assets/cn/mobile/invitation-poster-cn-ca313db9277b77e05ca7d43f5cc5d2d4.jpg"
-                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://m.dji.com/cn"><i
+                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"><i
                         class="icon-txwb">TXWeibo</i></a></li>
             </ul>
         </div>
