--- a/mobile/index.html
+++ b/mobile/index.html
@@ -3,7 +3,7 @@
 <head>
     <script type="text/javascript">var NREUMQ = NREUMQ || [];
     NREUMQ.push(["mark", "firstbyte", new Date().getTime()]);</script>
-    <title>幸福VIP订制 - 幸福创客</title>
+    <title>首页 - 幸福创客</title>
     <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
           name="description"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
