--- a/mobile/about.html
+++ b/mobile/about.html
@@ -1,56 +1,205 @@
-
-<!doctype html>
-<html lang="en-US">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html">
+    <script type="text/javascript">var NREUMQ = NREUMQ || [];
+    NREUMQ.push(["mark", "firstbyte", new Date().getTime()]);</script>
     <title>关于我们 - 幸福创客</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <link rel="shortcut icon" href="http://www.templatemonster.com/favicon.ico">
-    <link rel="icon" href="http://www.templatemonster.com/favicon.ico">
-    <link rel="stylesheet" type="text/css" media="all" href="css/styles.css">
-    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-        <script type="text/javascript" src="js/jquery.glide.min.js"></script>
+    <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
+          name="description"/>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" name="viewport"/>
+    <meta content="telephone=no" name="format-detection"/>
+    <link href="./image/logo.png"
+          rel="apple-touch-icon-precomposed"/>
+    <link href="./image/logo.png"
+          rel="apple-touch-icon-precomposed" size="144x144"/>
+    <link href="./css/jdi.css" media="all"
+          rel="stylesheet"/>
+    <script type="text/javascript">var _isLogin = false;
+    var _invitationCode = '';
+    var _lang = 'cn';
+    </script>
+    <script src="./js/jdi.js"></script>
+    <meta content="authenticity_token" name="csrf-param"/>
+    <meta content="iTGi6NexTXM4K3A8uNZhLqPJYaUFvoSG3E0mJgCgbHE=" name="csrf-token"/>
+
+    <script type="text/javascript" src="//click.dji.com/statistics/spider.js"></script>
+    <script async="true" src="//static.criteo.net/js/ld/ld.js" type="text/javascript"></script>
 </head>
-
 <body>
-<div id="w">
-    <header>
-        <h1>关于我们</h1>
-    </header>
 
-    <div class="slider">
-        <ul class="slides">
-            <li class="slide">
-                <img src="image/witches.png" alt="dribbble witches">
-                <p>自我介绍</p> <p>自我介绍</p> <p>自我介绍</p> <p>自我介绍</p>
-            </li>
-            <li class="slide">
-                <img src="image/searing-mountain.png" alt="searing mountain illustration">
-                <p>自我介绍</p> <p>自我介绍</p> <p>自我介绍</p> <p>自我介绍</p>
-            </li>
-            <li class="slide">
-                <img src="image/taipei-fireworks.png" alt="taipei fireworks">
-                <p>自我介绍</p> <p>自我介绍</p> <p>自我介绍</p> <p>自我介绍</p>
-            </li>
-            <li class="slide">
-                <img src="image/iphone-mockup.png" alt="coffee cup iphone newspaper">
-                <p>自我介绍</p> <p>自我介绍</p> <p>自我介绍</p> <p>自我介绍</p>
-            </li>
-            <li class="slide">
-                <img src="image/super-squirrel.png" alt="flying super squirrel">
-                <p>自我介绍</p> <p>自我介绍</p> <p>自我介绍</p> <p>自我介绍</p>
+<div data-role="page" data-theme="b" id="home_page">
+    <div class="ui-nodisc-icon" data-position="fixed" data-role="header" data-theme="a">
+        <img class="head-btn head-btn-back" id="go-back-btn" src="./image/weixin.png" style="width: 28px;height: 28px">
+
+        <a class="head-btn head-btn-share" data-ajax="false" href="ios::share" id="ui-share-btn"></a>
+        <a class="head-btn head-btn-account" data-ajax="false" href="http://m.dji.com/cn/user_center"
+           id="ui-account-btn"></a>
+
+        <h1 class="logo"><a data-ajax="false" href="#">
+            <img alt="dji" src="./image/logo.png"/></a>
+        </h1>
+    </div>
+    <div id="kv-index">
+        <div class="kv">
+            <div class="ui-body-e">
+                <a href="#"><!--  -->
+                    <img alt="kv" class="img-responsive"
+                         src="./image/five.png"/>
+
+                </a>
+            </div>
+        </div>
+
+    </div>
+
+    <div style="text-align: center;margin: 20px ">
+
+        <img src="./image/xingfuchuangke.png">
+    </div>
+
+    <ul class="ui-alt-icon ui-nodisc-icon news-list ui-listview ui-listview-inset ui-corner-all ui-shadow"
+        data-icon="none" data-inset="true" data-role="listview">
+        <li class="ui-li-has-thumb ui-first-child">
+            <div style=" width:50px; height:50px; background-color:#F00; border-radius:25px; float: left">
+                <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
+                    愿景
+                </span>
+            </div>
+            <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
+                使人们过的更健康、更幸福
+            </span>
+        </li>
+        <li class="ui-li-has-thumb ui-first-child">
+            <div style=" width:50px; height:50px; background-color:#F00; border-radius:25px; float: left">
+                <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
+                    使命
+                </span>
+            </div>
+            <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
+                体验科技创新 缔造幸福无限
+            </span>
+        </li>
+        <li class="ui-li-has-thumb ui-first-child">
+            <div style=" width:50px; height:50px; background-color:#F00; border-radius:25px; float: left">
+                <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
+                    价值观
+                </span>
+            </div>
+            <span style="height:50px; display:block; color:#FFF; text-align:center">
+                (Customer obsession):<br>
+                成就所需，超越所想
+            </span>
+        </li>
+        <li class="ui-li-has-thumb ui-first-child">
+            <div style=" width:50px; height:50px; background-color:#F00; border-radius:25px; float: left">
+                <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
+                    真诚
+                </span>
+            </div>
+            <span style="height:50px; display:block; color:#FFF; text-align:center">
+                (Authentic):<br>
+                真诚做人、坦诚做事
+            </span>
+        </li>
+        <li class="ui-li-has-thumb ui-first-child">
+            <div style=" width:50px; height:50px; background-color:#F00; border-radius:25px; float: left">
+                <span style="height:50px; display:block; color:#FFF; text-align:center">
+                    成为<br>
+                    先驱者
+                </span>
+            </div>
+            <span style="height:50px; display:block; color:#FFF; text-align:center">
+                (Be an Innovator):<br>
+                大世界、思不同
+            </span>
+        </li>
+        <li class="ui-li-has-thumb ui-first-child">
+            <div style=" width:50px; height:50px; background-color:#F00; border-radius:25px; float: left">
+                <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
+                    极致
+                </span>
+            </div>
+            <span style="height:50px; display:block; color:#FFF; text-align:center">
+                (Exterme):<br>
+                精益求精，超越极限
+            </span>
+        </li>
+        <li class="ui-li-has-thumb ui-first-child">
+            <div style=" width:50px; height:50px; background-color:#F00; border-radius:25px; float: left">
+                <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
+                    专注
+                </span>
+            </div>
+            <span style="height:50px; display:block; color:#FFF; text-align:center">
+                (Focus):<br>
+                少就是多，大道至简
+            </span>
+        </li>
+        <li class="ui-li-has-thumb ui-first-child">
+            <div style=" width:50px; height:50px; background-color:#F00; border-radius:25px; float: left">
+                <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
+                    初心
+                </span>
+            </div>
+            <span style="height:50px; display:block; color:#FFF; text-align:center">
+                (Beginner's Mind):<br>
+                心思纯净，心存美好
+            </span>
+        </li>
+    </ul>
+    <div class="text-center social-share" data-role="content" id="social-share">
+        <h2>分享给好友</h2>
+        <ul class="share-list">
+            <li><a class="share-icon"
+                   data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                   data-platform="weibo" data-title="" data-type="weibo" data-url="http://winnovator.com"><i
+                    class="icon-weibo">Weibo</i></a></li>
+            <li><a class="share-icon"
+                   data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                   data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"><i
+                    class="icon-txwb">TXWeibo</i></a></li>
+        </ul>
+    </div>
+    <script src="//dn-djistore1.qbox.me/assets/cn/mobile/jquery.tagsinput-cdn-f42dafe9721b94a9377dcaffc9c8e61b.js"></script>
+    <script src="//dn-djistore2.qbox.me/assets/cn/mobile/share-cdn-2f4da3c293225373c2196f53176017ba.js"></script>
+    <div class="ui-nodisc-icon footer" data-role="content">
+        <div class="user-center-main k-footer-list">
+            <ul>
+                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
+                        class="text">媒体介绍</span></a></li>
+                </li>
+                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
+                        class="text">联络我们</span></a></li>
+                </li>
+                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
+                        class="text">在线客服</span></a></li>
+                </li>
+                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
+                        class="text">合作伙伴</span></a></li>
+                </li>
+
+
+            </ul>
+        </div>
+        <ul class="ui-footer-bg footer-list" data-inset="false" data-role="listview" data-theme="d">
+            <li class="dji-policy" style="padding:10px 8px;"><h2 class="text-center"><a
+                    href="http://m.dji.com/cn/privacy_policy" style="padding-right:1em;">隐私政策</a><a
+                    href="http://m.dji.com/cn/terms_of_use" style="padding-right:1em;">使用条款</a> </h2></li>
+            <li class="copyright">
+                <h2 class="text-center font-size12">
+                    <small>Copyright &copy; 2015 幸福创客 版权所有</small>
+                </h2>
             </li>
         </ul>
-    </div><!-- @end .slider -->
-</div><!-- @end #w -->
-<script type="text/javascript">
-    $(function(){
-        $('.slider').glide({
-            autoplay:false,
-            arrows:false
-        });
-    });
-</script>
+
+    </div>
+
+
+
+
+</div>
+
+
 </body>
 </html>
