--- a/mobile/custommade.html
+++ b/mobile/custommade.html
@@ -3,7 +3,7 @@
 <head>
     <script type="text/javascript">var NREUMQ = NREUMQ || [];
     NREUMQ.push(["mark", "firstbyte", new Date().getTime()]);</script>
-    <title>首页 - 幸福创客</title>
+    <title>幸福VIP订制 - 幸福创客</title>
     <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
           name="description"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
@@ -203,7 +203,55 @@
         </a>
     </li>
     </ul>
+        <div class="text-center social-share" data-role="content" id="social-share">
+            <h2>分享给好友</h2>
+            <ul class="share-list">
+                <li><a class="share-icon"
+                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-platform="weibo" data-title="" data-type="weibo" data-url="http://winnovator.com"><i
+                        class="icon-weibo">Weibo</i></a></li>
+                <li><a class="share-icon"
+                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"><i
+                        class="icon-txwb">TXWeibo</i></a></li>
+            </ul>
+        </div>
+        <script src="//dn-djistore1.qbox.me/assets/cn/mobile/jquery.tagsinput-cdn-f42dafe9721b94a9377dcaffc9c8e61b.js"></script>
+        <script src="//dn-djistore2.qbox.me/assets/cn/mobile/share-cdn-2f4da3c293225373c2196f53176017ba.js"></script>
     </div>
+    <div class="ui-nodisc-icon footer" data-role="content">
+        <div class="user-center-main k-footer-list">
+            <ul>
+                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
+                        class="text">媒体介绍</span></a></li>
+                </li>
+                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
+                        class="text">联络我们</span></a></li>
+                </li>
+                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
+                        class="text">在线客服</span></a></li>
+                </li>
+                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
+                        class="text">合作伙伴</span></a></li>
+                </li>
+
+
+            </ul>
+        </div>
+        <ul class="ui-footer-bg footer-list" data-inset="false" data-role="listview" data-theme="d">
+            <li class="dji-policy" style="padding:10px 8px;"><h2 class="text-center"><a
+                    href="http://m.dji.com/cn/privacy_policy" style="padding-right:1em;">隐私政策</a><a
+                    href="http://m.dji.com/cn/terms_of_use" style="padding-right:1em;">使用条款</a> </h2></li>
+            <li class="copyright">
+                <h2 class="text-center font-size12">
+                    <small>Copyright &copy; 2015 幸福创客 版权所有</small>
+                </h2>
+            </li>
+        </ul>
+
+    </div>
+    </div>
+
 </div>
 
 </body>
