--- a/mobile/index.html
+++ b/mobile/index.html
@@ -35,7 +35,7 @@
         <a class="head-btn head-btn-account" data-ajax="false" href="http://m.dji.com/cn/user_center"
            id="ui-account-btn"></a>
 
-        <h1 class="logo"><a data-ajax="false" href="#">
+        <h1 class="logo"><a data-ajax="false" href="./index.html">
             <img alt="dji" src="./image/logo.png"/></a>
         </h1>
     </div>
