--- a/mobile/index.html
+++ b/mobile/index.html
@@ -128,8 +128,11 @@
                         class="icon-weibo">Weibo</i></a></li>
                 <li><a class="share-icon"
                        data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"><i
-                        class="icon-txwb">TXWeibo</i></a></li>
+                       data-platform="weixin" data-title=""
+                       data-type="weixin" data-url="http://winnovator.com">
+                        <i class="icon-txwb">TXWeibo</i>
+                    </a>
+                </li>
             </ul>
         </div>
         <script src="//dn-djistore1.qbox.me/assets/cn/mobile/jquery.tagsinput-cdn-f42dafe9721b94a9377dcaffc9c8e61b.js"></script>
