--- a/mobile/myindex.html
+++ b/mobile/myindex.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>首页 - 幸福创客</title>
+    <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
+          name="description"/>
     <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" name="viewport"/>
     <link rel="stylesheet" href="./css/my_style.css">
 
@@ -32,7 +35,7 @@
         <!-- 菜单 -->
         <ul class="main-nav-list">
             <li>
-                <a href="#">
+                <a href="./aboutus.html">
                     <img height="29" src="./image/store.png" width="32">
                     <span>关于我们</span>
                 </a>
@@ -58,7 +61,7 @@
         </ul>
 
 
-        <a href="#">
+        <a href="./used.html">
             <img class="info_img" src="./image/second.png"/>
         </a>
         <a href="#">
@@ -67,7 +70,7 @@
         <a href="#">
             <img class="info_img" src="./image/four.png"/>
         </a>
-        <a href="#">
+        <a href="./aboutus.html">
             <img class="info_img" src="./image/five.png"/>
         </a>
         <a href="#">
