--- a/mobile/aboutus.html
+++ b/mobile/aboutus.html
@@ -4,6 +4,7 @@
     <title>关于我们 - 幸福创客</title>
     <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
           name="description"/>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
     <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" name="viewport"/>
     <link rel="stylesheet" href="./css/my_style.css">
 
