--- a/mobile/myindex.html
+++ b/mobile/myindex.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ê×Ò³ - ÐÒ¸£´´¿Í</title>
-    <meta content="½áºÏÖªÊ¶Óë¿Æ¼¼,ÎªÈËÀà´òÔì¸üÐÒ¸£¡¢¸ü½¡¿µµÄÉú»î¡£"
+    <title>é¦–é¡µ - å¹¸ç¦åˆ›å®¢</title>
+    <meta content="ç»“åˆçŸ¥è¯†ä¸Žç§‘æŠ€,ä¸ºäººç±»æ‰“é€ æ›´å¹¸ç¦ã€æ›´å¥åº·çš„ç”Ÿæ´»ã€‚"
           name="description"/>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
     <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" name="viewport"/>
     <link rel="stylesheet" href="./css/my_style.css">
 
@@ -11,7 +12,7 @@
 </head>
 <body>
 
-    <!-- µ¼º½ -->
+    <!-- å¯¼èˆª -->
     <div class="my_nav">
         <a class="weixin" href="#">
             <img src="./image/weixin.png" />
@@ -32,30 +33,30 @@
             <img class="info_img" src="./image/first.png"/>
         </a>
 
-        <!-- ²Ëµ¥ -->
+        <!-- èœå• -->
         <ul class="main-nav-list">
             <li>
                 <a href="./aboutus.html">
                     <img height="29" src="./image/store.png" width="32">
-                    <span>¹ØÓÚÎÒÃÇ</span>
+                    <span>å…³äºŽæˆ‘ä»¬</span>
                 </a>
             </li>
             <li>
                 <a href="#">
                     <img height="29" src="./image/store.png" width="32">
-                    <span><²úÆ··þÎñ></²úÆ··þÎñ></span>
+                    <span><äº§å“æœåŠ¡></äº§å“æœåŠ¡></span>
                 </a>
             </li>
             <li>
                 <a href="#">
                     <img height="29" src="./image/store.png" width="32">
-                    <span>×¨¼Ò¿â</span>
+                    <span>ä¸“å®¶åº“</span>
                 </a>
             </li>
             <li>
                 <a href="#">
                     <img height="29" src="./image/store.png" width="32">
-                    <span style="">¼ÓÈëÎÒÃÇ</span>
+                    <span style="">åŠ å…¥æˆ‘ä»¬</span>
                 </a>
             </li>
         </ul>
@@ -78,13 +79,13 @@
         </a>
 
 
-        <!-- ·ÖÏí -->
+        <!-- åˆ†äº« -->
         <div class="share">
-            <h2>·ÖÏí¸øºÃÓÑ</h2>
+            <h2>åˆ†äº«ç»™å¥½å‹</h2>
             <ul class="share-list">
                 <li>
                     <a class="share-icon"
-                       data-description="ÐÒ¸£´´¿Í - ½áºÏÖªÊ¶Óë¿Æ¼¼,ÎªÈËÀà´òÔì¸üÐÒ¸£¡¢¸ü½¡¿µµÄÉú»î¡£"
+                       data-description="å¹¸ç¦åˆ›å®¢ - ç»“åˆçŸ¥è¯†ä¸Žç§‘æŠ€,ä¸ºäººç±»æ‰“é€ æ›´å¹¸ç¦ã€æ›´å¥åº·çš„ç”Ÿæ´»ã€‚"
                        data-img="./image/facebook.png"
                        data-platform="facebook" data-title="" data-type="facebook"
                        data-url="http://winnovator.com"
@@ -94,7 +95,7 @@
                 </li>
                 <li>
                     <a class="share-icon"
-                       data-description="ÐÒ¸£´´¿Í - ½áºÏÖªÊ¶Óë¿Æ¼¼,ÎªÈËÀà´òÔì¸üÐÒ¸£¡¢¸ü½¡¿µµÄÉú»î¡£"
+                       data-description="å¹¸ç¦åˆ›å®¢ - ç»“åˆçŸ¥è¯†ä¸Žç§‘æŠ€,ä¸ºäººç±»æ‰“é€ æ›´å¹¸ç¦ã€æ›´å¥åº·çš„ç”Ÿæ´»ã€‚"
                        data-img="./image/weixin.png"
                        data-platform="weibo" data-title="" data-type="weibo"
                        data-url="http://winnovator.com"
@@ -102,7 +103,7 @@
                         <img src="./image/weibo.png"/>
                     </a>
                 </li>
-                <li><a class="share-icon" data-description="ÐÒ¸£´´¿Í - ½áºÏÖªÊ¶Óë¿Æ¼¼,ÎªÈËÀà´òÔì¸üÐÒ¸£¡¢¸ü½¡¿µµÄÉú»î¡£"
+                <li><a class="share-icon" data-description="å¹¸ç¦åˆ›å®¢ - ç»“åˆçŸ¥è¯†ä¸Žç§‘æŠ€,ä¸ºäººç±»æ‰“é€ æ›´å¹¸ç¦ã€æ›´å¥åº·çš„ç”Ÿæ´»ã€‚"
                        data-img="./image/weixin.png"
                        data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
                        data-ajax="false">
@@ -117,39 +118,39 @@
                 <li>
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
-                        <span class="text">Ã½Ìå½éÉÜ</span>
+                        <span class="text">åª’ä½“ä»‹ç»</span>
                     </a>
                 </li>
                 <li>
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
-                        <span class="text">ÁªÂçÎÒÃÇ</span>
+                        <span class="text">è”ç»œæˆ‘ä»¬</span>
                     </a>
                 </li>
                 <li>
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
-                        <span class="text">ÔÚÏß¿Í·þ</span>
+                        <span class="text">åœ¨çº¿å®¢æœ</span>
                     </a>
                 </li>
                 <li>
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
-                        <span class="text">ºÏ×÷»ï°é</span>
+                        <span class="text">åˆä½œä¼™ä¼´</span>
                     </a>
                 </li>
 
-                <!--  Ìõ¿î -->
+                <!--  æ¡æ¬¾ -->
                 <li>
                     <div class="policy">
-                        <a href="#">ÒþË½Õþ²ß</a>
-                        <a href="#">Ê¹ÓÃÌõ¿î</a>
+                        <a href="#">éšç§æ”¿ç­–</a>
+                        <a href="#">ä½¿ç”¨æ¡æ¬¾</a>
                     </div>
 
                 </li>
                 <li>
                     <div class="copyright">
-                        Copyright? 2015 ÐÒ¸£´´¿Í °æÈ¨ËùÓÐ
+                        CopyrightÂ© 2015 å¹¸ç¦åˆ›å®¢ ç‰ˆæƒæ‰€æœ‰
                     </div>
 
                 </li>
