--- a/mobile/myindex.html
+++ b/mobile/myindex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html itemscope="itemscope" itemtype="http://schema.org/Product" lang="en">
 <head>
     <title>首页 - 幸福创客</title>
     <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
