--- a/mobile/used.html
+++ b/mobile/used.html
@@ -1,258 +1,248 @@
 <!DOCTYPE html>
-<html>
+<html itemscope="itemscope" itemtype="http://schema.org/Product" lang="en">
 <head>
-    <script type="text/javascript">var NREUMQ = NREUMQ || [];
-    NREUMQ.push(["mark", "firstbyte", new Date().getTime()]);</script>
     <title>幸福VIP订制 - 幸福创客</title>
     <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
           name="description"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
     <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" name="viewport"/>
-    <meta content="telephone=no" name="format-detection"/>
-    <link href="./image/logo.png"
-          rel="apple-touch-icon-precomposed"/>
-    <link href="./image/logo.png"
-          rel="apple-touch-icon-precomposed" size="144x144"/>
-    <link href="./css/jdi.css" media="all"
-          rel="stylesheet"/>
-    <script type="text/javascript">var _isLogin = false;
-    var _invitationCode = '';
-    var _lang = 'cn';
-    </script>
-    <script src="./js/jdi.js"></script>
-    <meta content="authenticity_token" name="csrf-param"/>
-    <meta content="iTGi6NexTXM4K3A8uNZhLqPJYaUFvoSG3E0mJgCgbHE=" name="csrf-token"/>
+    <link rel="stylesheet" href="./css/my_style.css">
 
-    <script type="text/javascript" src="//click.dji.com/statistics/spider.js"></script>
-    <script async="true" src="//static.criteo.net/js/ld/ld.js" type="text/javascript"></script>
+    <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
 </head>
 <body>
+    <!-- 导航 -->
+    <div class="my_nav">
+        <a class="weixin" href="#">
+            <img src="./image/weixin.png" />
+        </a>
 
-<div data-role="page" data-theme="b" id="home_page">
-    <div class="ui-nodisc-icon" data-position="fixed" data-role="header" data-theme="a">
-        <img class="head-btn head-btn-back" id="go-back-btn" src="./image/weixin.png" style="width: 28px;height: 28px">
 
-        <a class="head-btn head-btn-share" data-ajax="false" href="ios::share" id="ui-share-btn"></a>
-        <a class="head-btn head-btn-account" data-ajax="false" href="http://m.dji.com/cn/user_center"
-           id="ui-account-btn"></a>
+        <a class="logo" href="./index.html">
+            <img alt="dji" src="./image/logo.png"/>
+        </a>
 
-        <h1 class="logo"><a data-ajax="false" href="./index.html">
-            <img alt="dji" src="./image/logo.png"/></a>
-        </h1>
+        <a class="account" href="#">
+            <img  src="./image/account.png"/>
+        </a>
     </div>
-    <div id="kv-index">
-        <div class="kv">
-            <div class="ui-body-e">
-                <a href="#"><!--  -->
-                    <img alt="kv" class="img-responsive"
-                         src="./image/second.png"/>
 
-                </a>
-            </div>
-        </div>
+    <div class="my_page">
+        <img class="info_img" src="./image/second.png"/>
+
 
         <div class="vip-made" style="color: white; font-size: 16px; margin: 20px;">
             <p> &nbsp; &nbsp; &nbsp; &nbsp;"幸福VIP订制"，是幸福创客为企业提供的专业个性化服务，协助企业全方位地提高员工身心健康和幸福力，从而增加企业整体的工作效率，节省成本，保障企业和员工健康发展。无论是创业公司丶中小企业，还是世界五百强公司，我们都将打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，认真地为企业提供更全面丶更精准丶更便捷的合理化订制方案。
             </p><p> &nbsp; &nbsp; &nbsp; &nbsp;我们拥有世界级的心理科学专家和高素质的服务团队，建立了与国际保持同步的企业心理健康服务标准，透过移动互联网和人工智能技术，致力为所有员工及其家属提供最专业丶最贴心的服务，协助企业维护员工的幸福与健康。
 
             <br/>
-        </p><p>服务内容：
-            <br/>
-        </p><p>心理测验及行为预测
+            </p><p>服务内容：
+                <br/>
+            </p><p>心理测验及行为预测
 
-        </p><p>身心评估和提升方案
+            </p><p>身心评估和提升方案
 
-        </p><p>365*24小时全球心理健康帮助
+            </p><p>365*24小时全球心理健康帮助
 
-        </p><p>专家心理问答
+            </p><p>专家心理问答
 
-        </p><p> 1对1心理关怀倾诉
+            </p><p> 1对1心理关怀倾诉
 
-        </p><p>O2O员工心理课程
+            </p><p>O2O员工心理课程
 
-        </p><p>线上自助疏导心理问题
+            </p><p>线上自助疏导心理问题
 
-        </p><p>危机心理智能干预
+            </p><p>危机心理智能干预
 
-        </p><p>领导力与团队心智发展
+            </p><p>领导力与团队心智发展
 
-        </p><p>变革管理
+            </p><p>变革管理
 
-        </p><p>组织综合优化咨询
+            </p><p>组织综合优化咨询
             </p>
 
         </div>
 
-    </div>
 
-    <div class="info ui-content" data-role="content" role="main">
-    <ul class="ui-alt-icon ui-nodisc-icon news-list ui-listview ui-listview-inset ui-corner-all ui-shadow"
-        data-icon="none" data-inset="true" data-role="listview">
-        <li class="ui-li-has-thumb ui-first-child">
-            <a href="#"
-               class="ui-btn ui-btn-icon-right ui-icon-none"
-               data-ajax="false" style="background-color: white">
-               <div style="color: #000000;text-align: center">
-                   <h2>英国航天系统公司</h2>
-                   <h2>BAE Systems</h2>
-               </div>
-                <hr/>
-                <img alt="大疆创新全球女飞手宣传月" class="img-responsive"
-                     src="./image/beasystems.png">
-                <p>我们与英国航天系统公司其中掌管25亿英镑的商业单位之部门领导团队合作，开发团队和个人的咨询丶培训丶及个性专长测评APP，建立幸福企业文化转型。</p>
+        <!-- 各个使用案例 -->
+        <div>
+            <ul class="cases-list">
+                <li>
+                    <div >
+                        <h2>英国航天系统公司</h2>
+                        <h2>BAE Systems</h2>
+                    </div>
+                    <hr/>
+                    <div>
+                        <img alt="英国航天系统公司"
+                             src="./image/beasystems.png">
 
-            </a>
-        </li><li class="ui-li-has-thumb ui-first-child">
-        <a href="#"
-           class="ui-btn ui-btn-icon-right ui-icon-none"
-           data-ajax="false" style="background-color: white">
-            <div style="color: #000000;text-align: center">
-                <h2>博鳌亚洲论坛</h2>
-                <h2>Boao Forum</h2>
-            </div>
-            <hr/>
-            <img alt="大疆创新全球女飞手宣传月" class="img-responsive"
-                 src="./image/beasystems.png">
-            <p>我们为博鳌论坛亚洲影响力百强榜开发幸福企业指标包括: 品牌影响力丶企业社会责任丶员工幸福力等，调研范围覆盖8个国家，12个城市，共138家亚洲千亿企业，整合数据库及提供智能分析。</p>
+                    </div>
+                    <p> &nbsp; &nbsp; &nbsp; &nbsp;我们与英国航天系统公司其中掌管25亿英镑的商业单位之部门领导团队合作，开发团队和个人的咨询丶培训丶及个性专长测评APP，建立幸福企业文化转型。</p>
 
-        </a>
-    </li>
-        <li class="ui-li-has-thumb ui-first-child">
-            <a href="#"
-               class="ui-btn ui-btn-icon-right ui-icon-none"
-               data-ajax="false" style="background-color: white">
-                <div style="color: #000000;text-align: center">
-                    <h2>思科系统公司</h2>
-                    <h2>Cisco</h2>
+                </li><li>
+                    <div >
+                        <h2>博鳌亚洲论坛</h2>
+                        <h2>Boao Forum</h2>
+                    </div>
+                    <hr/>
+                    <div><img alt="博鳌亚洲论坛"
+                              src="./image/beasystems.png">
+                    </div>
+                    <p> &nbsp; &nbsp; &nbsp; &nbsp;我们为博鳌论坛亚洲影响力百强榜开发幸福企业指标包括: 品牌影响力丶企业社会责任丶员工幸福力等，调研范围覆盖8个国家，12个城市，共138家亚洲千亿企业，整合数据库及提供智能分析。</p>
+
+            </li>
+                <li>
+                    <div >
+                        <h2>思科系统公司</h2>
+                        <h2>Cisco</h2>
+                    </div>
+                    <hr/>
+                    <div><img alt="思科系统公司"
+                         src="./image/beasystems.png">
+                        </div>
+                    <p> &nbsp; &nbsp; &nbsp; &nbsp;我们引进了以才能为本的领导力训练APP, 以及领导力及幸福力测评予思科系统公司(英国)，让他们在变革和过渡的若干时间后，全面提升管理层领导力及幸福感表现。</p>
+
+                </li><li>
+                    <div >
+                        <h2>安永会计师事务所</h2>
+                        <h2>Ernst & Young</h2>
+                    </div>
+                    <hr/>
+                <div><img alt="安永会计师事务所"
+                         src="./image/beasystems.png">
+                    </div>
+                    <p> &nbsp; &nbsp; &nbsp; &nbsp;我们设计丶开发和提供管理层幸福力建设，并制定人力资源战略咨询，包括开发领导力测评丶团队发展测评丶员工幸福力工具箱等企业VIP定制APP。</p>
+
+            </li><li>
+                <div >
+                    <h2>葛兰素史克股份有限公司</h2>
+                    <h2>GlaxoSmithKline</h2>
                 </div>
                 <hr/>
-                <img alt="大疆创新全球女飞手宣传月" class="img-responsive"
+                <div><img alt="葛兰素史克股份有限公司"
                      src="./image/beasystems.png">
-                <p>我们引进了以才能为本的领导力训练APP, 以及领导力及幸福力测评予思科系统公司(英国)，让他们在变革和过渡的若干时间后，全面提升管理层领导力及幸福感表现。</p>
+                    </div>
+                <p> &nbsp; &nbsp; &nbsp; &nbsp;我们协助葛兰素史克股份有限公司(英国)运用幸福科学或积极心理学的研究和开发，支持内部团队开发活动，建立线上心理互助及减压社区。</p>
 
-            </a>
-        </li><li class="ui-li-has-thumb ui-first-child">
-        <a href="#"
-           class="ui-btn ui-btn-icon-right ui-icon-none"
-           data-ajax="false" style="background-color: white">
-            <div style="color: #000000;text-align: center">
-                <h2>安永会计师事务所</h2>
-                <h2>Ernst & Young</h2>
-            </div>
-            <hr/>
-            <img alt="大疆创新全球女飞手宣传月" class="img-responsive"
-                 src="./image/beasystems.png">
-            <p>我们设计丶开发和提供管理层幸福力建设，并制定人力资源战略咨询，包括开发领导力测评丶团队发展测评丶员工幸福力工具箱等企业VIP定制APP。</p>
+            </li><li>
+                <div >
+                    <h2>渣打银行</h2>
+                    <h2>Standard Chartered Bank</h2>
+                </div>
+                <hr/>
+                <div>
+                <img alt="渣打银行"
+                     src="./image/beasystems.png"></div>
+                <p> &nbsp; &nbsp; &nbsp; &nbsp;我们与渣打银行(英国)设计他们的「优秀经理人幸福力计划」(Great Manager Well-being Programme)，开发一个以才能为本的O2O培训APP。</p>
 
-        </a>
-    </li><li class="ui-li-has-thumb ui-first-child">
-        <a href="#"
-           class="ui-btn ui-btn-icon-right ui-icon-none"
-           data-ajax="false" style="background-color: white">
-            <div style="color: #000000;text-align: center">
-                <h2>葛兰素史克股份有限公司</h2>
-                <h2>GlaxoSmithKline</h2>
-            </div>
-            <hr/>
-            <img alt="大疆创新全球女飞手宣传月" class="img-responsive"
-                 src="./image/beasystems.png">
-            <p>我们协助葛兰素史克股份有限公司(英国)运用幸福科学或积极心理学的研究和开发，支持内部团队开发活动，建立线上心理互助及减压社区。</p>
+            </li><li>
+                <div >
+                    <h2>汤森路透</h2>
+                    <h2>Thomson Reuters</h2>
+                </div>
+                <hr/>
+                <div><img alt="汤森路透"
+                     src="./image/beasystems.png">
+                    </div>
+                <p> &nbsp; &nbsp; &nbsp; &nbsp;我们开发企业的内部评估和发展人才优势APP。我们也提供了女性幸福领导计划，让女性可在汤森路透能与我们的心理学家一对一互动解决身心健康问题。</p>
 
-        </a>
-    </li><li class="ui-li-has-thumb ui-first-child">
-        <a href="#"
-           class="ui-btn ui-btn-icon-right ui-icon-none"
-           data-ajax="false" style="background-color: white">
-            <div style="color: #000000;text-align: center">
-                <h2>渣打银行</h2>
-                <h2>Standard Chartered Bank</h2>
-            </div>
-            <hr/>
-            <img alt="大疆创新全球女飞手宣传月" class="img-responsive"
-                 src="./image/beasystems.png">
-            <p>我们与渣打银行(英国)设计他们的「优秀经理人幸福力计划」(Great Manager Well-being Programme)，开发一个以才能为本的O2O培训APP。</p>
+            </li><li>
+                <div >
+                    <h2>联合利华</h2>
+                    <h2>Unilever</h2>
+                </div>
+                <hr/>
+                <div><img alt="联合利华"
+                     src="./image/beasystems.png">
+                    </div>
+                <p> &nbsp; &nbsp; &nbsp; &nbsp;我们与联合利华(欧洲丶中国)在众多研究和发展项目上合作，为联合利华提供个性化的定制开发。包括联合利华产品对消费者的活力丶快乐丶幸福感，包括Magnum PQ（快乐商数）在大中华区及欧洲的测试。</p>
 
-        </a>
-    </li><li class="ui-li-has-thumb ui-first-child">
-        <a href="#"
-           class="ui-btn ui-btn-icon-right ui-icon-none"
-           data-ajax="false" style="background-color: white">
-            <div style="color: #000000;text-align: center">
-                <h2>汤森路透</h2>
-                <h2>Thomson Reuters</h2>
-            </div>
-            <hr/>
-            <img alt="大疆创新全球女飞手宣传月" class="img-responsive"
-                 src="./image/beasystems.png">
-            <p>我们开发企业的内部评估和发展人才优势APP。我们也提供了女性幸福领导计划，让女性可在汤森路透能与我们的心理学家一对一互动解决身心健康问题。</p>
+            </li>
+            </ul>
+        </div>
 
-        </a>
-    </li><li class="ui-li-has-thumb ui-first-child">
-        <a href="#"
-           class="ui-btn ui-btn-icon-right ui-icon-none"
-           data-ajax="false" style="background-color: white">
-            <div style="color: #000000;text-align: center">
-                <h2>联合利华</h2>
-                <h2>Unilever</h2>
-            </div>
-            <hr/>
-            <img alt="大疆创新全球女飞手宣传月" class="img-responsive"
-                 src="./image/beasystems.png">
-            <p>我们与联合利华(欧洲丶中国)在众多研究和发展项目上合作，为联合利华提供个性化的定制开发。包括联合利华产品对消费者的活力丶快乐丶幸福感，包括Magnum PQ（快乐商数）在大中华区及欧洲的测试。</p>
-
-        </a>
-    </li>
-    </ul>
-        <div class="text-center social-share" data-role="content" id="social-share">
+        <!-- 分享 -->
+        <div class="share">
             <h2>分享给好友</h2>
             <ul class="share-list">
-                <li><a class="share-icon"
+                <li>
+                    <a class="share-icon"
                        data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-platform="weibo" data-title="" data-type="weibo" data-url="http://winnovator.com"><i
-                        class="icon-weibo">Weibo</i></a></li>
-                <li><a class="share-icon"
+                       data-img="./image/facebook.png"
+                       data-platform="facebook" data-title="" data-type="facebook"
+                       data-url="http://winnovator.com"
+                       data-ajax="false">
+                        <img src="./image/facebook.png"/>
+                    </a>
+                </li>
+                <li>
+                    <a class="share-icon"
                        data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"><i
-                        class="icon-txwb">TXWeibo</i></a></li>
+                       data-img="./image/weixin.png"
+                       data-platform="weibo" data-title="" data-type="weibo"
+                       data-url="http://winnovator.com"
+                       data-ajax="false">
+                        <img src="./image/weibo.png"/>
+                    </a>
+                </li>
+                <li><a class="share-icon" data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-img="./image/weixin.png"
+                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
+                       data-ajax="false">
+                    <img src="./image/weixin_icon.jpg"/>
+                </a>
+                </li>
             </ul>
         </div>
-        <script src="//dn-djistore1.qbox.me/assets/cn/mobile/jquery.tagsinput-cdn-f42dafe9721b94a9377dcaffc9c8e61b.js"></script>
-        <script src="//dn-djistore2.qbox.me/assets/cn/mobile/share-cdn-2f4da3c293225373c2196f53176017ba.js"></script>
-    </div>
-    <div class="ui-nodisc-icon footer" data-role="content">
-        <div class="user-center-main k-footer-list">
+
+        <div class="footer_navbar">
             <ul>
-                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
-                        class="text">媒体介绍</span></a></li>
+                <li>
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">媒体介绍</span>
+                    </a>
                 </li>
-                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
-                        class="text">联络我们</span></a></li>
+                <li>
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">联络我们</span>
+                    </a>
                 </li>
-                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
-                        class="text">在线客服</span></a></li>
+                <li>
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">在线客服</span>
+                    </a>
                 </li>
-                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
-                        class="text">合作伙伴</span></a></li>
+                <li>
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">合作伙伴</span>
+                    </a>
                 </li>
 
+                <!--  条款 -->
+                <li>
+                    <div class="policy">
+                        <a href="#">隐私政策</a>
+                        <a href="#">使用条款</a>
+                    </div>
 
+                </li>
+                <li>
+                    <div class="copyright">
+                        Copyright© 2015 幸福创客 版权所有
+                    </div>
+
+                </li>
             </ul>
+
         </div>
-        <ul class="ui-footer-bg footer-list" data-inset="false" data-role="listview" data-theme="d">
-            <li class="dji-policy" style="padding:10px 8px;"><h2 class="text-center"><a
-                    href="http://m.dji.com/cn/privacy_policy" style="padding-right:1em;">隐私政策</a><a
-                    href="http://m.dji.com/cn/terms_of_use" style="padding-right:1em;">使用条款</a> </h2></li>
-            <li class="copyright">
-                <h2 class="text-center font-size12">
-                    <small>Copyright &copy; 2015 幸福创客 版权所有</small>
-                </h2>
-            </li>
-        </ul>
-
-    </div>
     </div>
 
-</div>
+    <script type="text/javascript" src="./js/my_share.js"></script>
 
 </body>
 </html>
