--- a/mobile/myindex.html
+++ b/mobile/myindex.html
@@ -71,7 +71,7 @@
         <a href="#">
             <img class="info_img" src="./image/four.png"/>
         </a>
-        <a href="./aboutus.html">
+        <a href="./ourteam.html">
             <img class="info_img" src="./image/five.png"/>
         </a>
         <a href="#">
