--- a/mobile/index.html
+++ b/mobile/index.html
@@ -23,7 +23,7 @@
             <img alt="dji" src="./image/logo.png"/>
         </a>
 
-        <a class="account" href="#">
+        <a class="account" href="./login.html">
             <img  src="./image/account.png"/>
         </a>
     </div>
