--- a/mobile/index.html
+++ b/mobile/index.html
@@ -18,10 +18,12 @@
             <img src="./image/weixin.png" />
         </a>
 
+        <h1 class="logo">
+            <a href="./index.html">
+                <img alt="dji" src="./image/logo.png"/>
+            </a>
+        </h1>
 
-        <a class="logo" href="./index.html">
-            <img alt="dji" src="./image/logo.png"/>
-        </a>
 
         <a class="account" href="./login.html">
             <img  src="./image/account.png"/>
