--- a/mobile/index.html
+++ b/mobile/index.html
@@ -39,25 +39,25 @@
         <ul class="main-nav-list">
             <li>
                 <a href="./aboutus.html">
-                    <img height="29" src="./image/store.png" width="32">
+                    <img src="./image/ahoutus.png">
                     <span>关于我们</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img height="29" src="./image/store.png" width="32">
-                    <span><产品服务></产品服务></span>
+                    <img src="./image/products.png">
+                    <span>产品服务</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img height="29" src="./image/store.png" width="32">
+                    <img src="./image/team.png">
                     <span>专家库</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img height="29" src="./image/store.png" width="32">
+                    <img src="./image/welcome.png">
                     <span style="">加入我们</span>
                 </a>
             </li>
