--- a/mobile/index.html
+++ b/mobile/index.html
@@ -14,9 +14,9 @@
 
     <!-- 导航 -->
     <div class="my_nav">
-        <a class="weixin" href="#">
-            <img src="./image/weixin.png" />
-        </a>
+        <!--<a class="weixin" href="javascript:history.go(-1);">-->
+            <!--<img src="./image/goback.png"/>-->
+        <!--</a>-->
 
         <h1 class="logo">
             <a href="./index.html">
@@ -58,7 +58,7 @@
             <li>
                 <a href="#">
                     <img src="./image/welcome.png">
-                    <span style="">加入我们</span>
+                    <span style="">社会责任</span>
                 </a>
             </li>
         </ul>
@@ -114,6 +114,7 @@
                 </li>
             </ul>
         </div>
+
 
         <div class="footer_navbar">
             <ul>
