--- a/mobile/aboutus.html
+++ b/mobile/aboutus.html
@@ -13,111 +13,116 @@
 <body>
     <!-- 导航 -->
     <div class="my_nav">
-        <a class="weixin" href="#">
-            <img src="./image/weixin.png" />
-        </a>
+    <a class="weixin" href="javascript:history.go(-1);">
+        <img src="./image/goback.png"/>
+    </a>
 
-
-        <a class="logo" href="./index.html">
+    <h1 class="logo">
+        <a href="./index.html">
             <img alt="dji" src="./image/logo.png"/>
         </a>
+    </h1>
 
-        <a class="account" href="#">
-            <img  src="./image/account.png"/>
-        </a>
-    </div>
+
+    <a class="account" href="./login.html">
+        <img  src="./image/account.png"/>
+    </a>
+</div>
 
     <div class="my_page">
-        <img class="info_img" src="./image/five.png"/>
+        <img class="info_img" src="./image/us.png"/>
 
-        <div style="text-align: center;">
-            <img src="./image/xingfuchuangke.png"/>
-        </div>
 
         <!-- 愿景列表 -->
         <ul class="expect_list">
             <li>
-                <div class="circle" style="background-color:#F00;">
-                    <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
-                        愿景
-                    </span>
-                </div>
-                <span style="height:50px; line-height:50px; display:block; color:#FFF;margin-left: 80px;">
-                    使人们过的更健康、更幸福
+                <div class="small-circle" style="background-color:#018a01;"></div>
+                <span>
+                    愿景:使人们过的更健康、更幸福
                 </span>
             </li>
             <li>
-                <div class="circle" style="background-color:#F00;">
-                    <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
-                        使命
-                    </span>
+                <div class="small-circle" style="background-color:#fbed50;">
+
                 </div>
-                <span style="height:50px; line-height:50px; display:block; color:#FFF;margin-left: 80px;">
-                    体验科技创新 缔造幸福无限
+                <span>
+                   使命: 体验科技创新 缔造幸福无限
                 </span>
             </li>
             <li>
-                <div class="circle" style="background-color:#F00;">
-                    <span style="height:50px; line-height:50px; display:block; color:#FFF;">
-                        价值观
-                    </span>
-                </div>
+                <div class="small-circle" style="background-color:#157cee;"></div>
+                <span>
+                    价值观:
+                </span>
+            </li>
+            <li>
+                <!--<div class="circle" style="background-color:#F00;">-->
+                    <!--<span style="height:50px; line-height:50px; display:block; color:#FFF;">-->
+                        <!--价值观-->
+                    <!--</span>-->
+                <!--</div>-->
+                <img src="./image/chengjiu.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
                     (Customer obsession):<br>
                     成就所需，超越所想
                 </span>
             </li>
             <li>
-                <div class="circle" style="background-color:#F00;">
-                    <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
-                        真诚
-                    </span>
-                </div>
+                <!--<div class="circle" style="background-color:#F00;">-->
+                    <!--<span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">-->
+                        <!--真诚-->
+                    <!--</span>-->
+                <!--</div>-->
+                <img src="./image/zhencheng.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
                     (Authentic):<br>
                     真诚做人、坦诚做事
                 </span>
             </li>
             <li>
-                <div class="circle" style="background-color:#F00;">
-                    <span style="height:50px; display:block; color:#FFF; text-align:center">
-                        成为<br>
-                        先驱者
-                    </span>
-                </div>
+                <!--<div class="circle" style="background-color:#F00;">-->
+                    <!--<span style="height:50px; display:block; color:#FFF; text-align:center">-->
+                        <!--成为<br>-->
+                        <!--先驱者-->
+                    <!--</span>-->
+                <!--</div>-->
+                <img src="./image/xianqu.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
                     (Be an Innovator):<br>
                     大世界、思不同
                 </span>
             </li>
             <li>
-                <div class="circle"  style="background-color:#F00;">
-                    <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
-                        极致
-                    </span>
-                </div>
+                <!--<div class="circle"  style="background-color:#F00;">-->
+                    <!--<span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">-->
+                        <!--极致-->
+                    <!--</span>-->
+                <!--</div>-->
+                <img src="./image/qizhi.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
                     (Exterme):<br>
                     精益求精，超越极限
                 </span>
             </li>
             <li>
-                <div class="circle" style="background-color:#F00;">
-                    <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
-                        专注
-                    </span>
-                </div>
+                <!--<div class="circle" style="background-color:#F00;">-->
+                    <!--<span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">-->
+                        <!--专注-->
+                    <!--</span>-->
+                <!--</div>-->
+                <img src="./image/zhuanxin.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
                     (Focus):<br>
                     少就是多，大道至简
                 </span>
             </li>
             <li>
-                <div class="circle"  style="background-color:#F00;">
-                    <span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">
-                        初心
-                    </span>
-                    </div>
+                <!--<div class="circle"  style="background-color:#F00;">-->
+                    <!--<span style="height:50px; line-height:50px; display:block; color:#FFF; text-align:center">-->
+                        <!--初心-->
+                    <!--</span>-->
+                    <!--</div>-->
+                <img src="./image/chuxin.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
                     (Beginner's Mind):<br>
                     心思纯净，心存美好
@@ -162,25 +167,25 @@
 
         <div class="footer_navbar">
             <ul>
-                <li>
+                <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
                         <span class="text">媒体介绍</span>
                     </a>
                 </li>
-                <li>
+                <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
                         <span class="text">联络我们</span>
                     </a>
                 </li>
-                <li>
+                <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
                         <span class="text">在线客服</span>
                     </a>
                 </li>
-                <li>
+                <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
                         <span class="text">合作伙伴</span>
