--- a/mobile/login.html
+++ b/mobile/login.html
@@ -11,22 +11,24 @@
     <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
 </head>
 <body>
-
 <!-- 导航 -->
 <div class="my_nav">
-    <a class="weixin" href="#">
-        <img src="./image/weixin.png" />
+    <a class="weixin" href="javascript:history.go(-1);">
+        <img src="./image/goback.png"/>
     </a>
 
+    <h1 class="logo">
+        <a href="./index.html">
+            <img alt="dji" src="./image/logo.png"/>
+        </a>
+    </h1>
 
-    <a class="logo" href="./index.html">
-        <img alt="dji" src="./image/logo.png"/>
-    </a>
 
-    <a class="account" href="#">
+    <a class="account" href="./login.html">
         <img  src="./image/account.png"/>
     </a>
 </div>
+
 
 <div class="my_page">
     <div>
