--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -14,21 +14,145 @@
     <script type="text/javascript" src="./js/jquery.glide.min.js"></script>
 </head>
 <body>
-<div class="team slider">
-    <div class="slides">
-        <div>
-            <img style="position: relative; float: left;" class="photo" src="./image/tim.png">
-            <img class="info" src="./image/tim-info.png">
-        </div>
-        <div>
-            <!--<img src="image/bg-responsive.jpg">-->
-        </div>
-        <div>
-            <!--<img src="image/bg-fast.jpg">-->
-        </div>
-    </div>
+<!-- 导航 -->
+<div class="my_nav">
+    <a class="weixin" href="javascript:history.go(-1);">
+        <img src="./image/goback.png"/>
+    </a>
+
+    <h1 class="logo">
+        <a href="./index.html">
+            <img alt="dji" src="./image/logo.png"/>
+        </a>
+    </h1>
+
+
+    <a class="account" href="./login.html">
+        <img  src="./image/account.png"/>
+    </a>
 </div>
 
+    <div class="my_page">
+        <img src="image/office.png">
+
+        <!-- 介绍 -->
+        <div class="us_info">
+            <p>最杰出的心里及医学专家</p>
+            <p>最创新的科技设计天才</p>
+            <p>使命、梦想、热诚把我们团结在一起</p>
+            <p>只为了</p>
+            <p>打造一个世界品牌</p>
+        </div>
+
+
+        <div>
+            <div class="team slider">
+                <div class="content-wrapper slides">
+                    <div class="content_article content_article--fast slide">
+                        <img style="position: relative; float: left; width: 50%;" class="photo"
+                             src="./image/tim.png">
+                        <img style="position: relative; float: left; width: 50%;" class="info"
+                             src="./image/tim-info.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img style="position: relative; float: left; width: 50%;" class="photo"
+                             src="./image/maomao.png">
+                        <img style="position: relative; float: left; width: 50%;" class="info"
+                             src="./image/maomao-info.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img style="position: relative; float: left; width: 50%;" class="photo"
+                             src="./image/yijiao.png">
+                        <img style="position: relative; float: left; width: 50%;" class="info"
+                             src="./image/yijiao-info.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <!-- 分享 -->
+        <div class="share">
+            <h2>分享给好友</h2>
+            <ul class="share-list">
+                <li>
+                    <a class="share-icon"
+                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-img="./image/facebook.png"
+                       data-platform="facebook" data-title="" data-type="facebook"
+                       data-url="http://winnovator.com"
+                       data-ajax="false">
+                        <img src="./image/facebook.png"/>
+                    </a>
+                </li>
+                <li>
+                    <a class="share-icon"
+                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-img="./image/weixin.png"
+                       data-platform="weibo" data-title="" data-type="weibo"
+                       data-url="http://winnovator.com"
+                       data-ajax="false">
+                        <img src="./image/weibo.png"/>
+                    </a>
+                </li>
+                <li><a class="share-icon" data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-img="./image/weixin.png"
+                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
+                       data-ajax="false">
+                    <img src="./image/weixin_icon.jpg"/>
+                </a>
+                </li>
+            </ul>
+        </div>
+
+
+        <div class="footer_navbar">
+            <ul>
+                <li class="footer_navbar_li">
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">媒体介绍</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">联络我们</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">在线客服</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">合作伙伴</span>
+                    </a>
+                </li>
+
+                <!--  条款 -->
+                <li>
+                    <div class="policy">
+                        <a href="#">隐私政策</a>
+                        <a href="#">使用条款</a>
+                    </div>
+
+                </li>
+                <li>
+                    <div class="copyright">
+                        Copyright© 2015 幸福创客 版权所有
+                    </div>
+
+                </li>
+            </ul>
+
+        </div>
+    </div>
 <script>
 
 
@@ -36,7 +160,7 @@
 
     var glide = $('.slider').glide({
         arrowRightText: '>',
-        arrowLeftText: '<   ',
+        arrowLeftText: '<',
         autoplay: false,
         circular: false,
         beforeTransition: function() {
