--- a/mobile/used.html
+++ b/mobile/used.html
@@ -11,21 +11,23 @@
     <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
 </head>
 <body>
-    <!-- 导航 -->
-    <div class="my_nav">
-        <a class="weixin" href="#">
-            <img src="./image/weixin.png" />
-        </a>
+<!-- 导航 -->
+<div class="my_nav">
+    <a class="weixin" href="javascript:history.go(-1);">
+        <img src="./image/goback.png"/>
+    </a>
 
-
-        <a class="logo" href="./index.html">
+    <h1 class="logo">
+        <a href="./index.html">
             <img alt="dji" src="./image/logo.png"/>
         </a>
+    </h1>
 
-        <a class="account" href="#">
-            <img  src="./image/account.png"/>
-        </a>
-    </div>
+
+    <a class="account" href="./login.html">
+        <img  src="./image/account.png"/>
+    </a>
+</div>
 
     <div class="my_page">
         <img class="info_img" src="./image/second.png"/>
@@ -87,7 +89,7 @@
                     </div>
                     <hr/>
                     <div><img alt="博鳌亚洲论坛"
-                              src="./image/beasystems.png">
+                              src="./image/asia.png">
                     </div>
                     <p> &nbsp; &nbsp; &nbsp; &nbsp;我们为博鳌论坛亚洲影响力百强榜开发幸福企业指标包括: 品牌影响力丶企业社会责任丶员工幸福力等，调研范围覆盖8个国家，12个城市，共138家亚洲千亿企业，整合数据库及提供智能分析。</p>
 
@@ -99,7 +101,7 @@
                     </div>
                     <hr/>
                     <div><img alt="思科系统公司"
-                         src="./image/beasystems.png">
+                         src="./image/cisco.png">
                         </div>
                     <p> &nbsp; &nbsp; &nbsp; &nbsp;我们引进了以才能为本的领导力训练APP, 以及领导力及幸福力测评予思科系统公司(英国)，让他们在变革和过渡的若干时间后，全面提升管理层领导力及幸福感表现。</p>
 
@@ -110,7 +112,7 @@
                     </div>
                     <hr/>
                 <div><img alt="安永会计师事务所"
-                         src="./image/beasystems.png">
+                         src="./image/ernst_young.png">
                     </div>
                     <p> &nbsp; &nbsp; &nbsp; &nbsp;我们设计丶开发和提供管理层幸福力建设，并制定人力资源战略咨询，包括开发领导力测评丶团队发展测评丶员工幸福力工具箱等企业VIP定制APP。</p>
 
@@ -121,7 +123,7 @@
                 </div>
                 <hr/>
                 <div><img alt="葛兰素史克股份有限公司"
-                     src="./image/beasystems.png">
+                     src="./image/gsk.png">
                     </div>
                 <p> &nbsp; &nbsp; &nbsp; &nbsp;我们协助葛兰素史克股份有限公司(英国)运用幸福科学或积极心理学的研究和开发，支持内部团队开发活动，建立线上心理互助及减压社区。</p>
 
@@ -133,7 +135,7 @@
                 <hr/>
                 <div>
                 <img alt="渣打银行"
-                     src="./image/beasystems.png"></div>
+                     src="./image/standard_chartered.png"></div>
                 <p> &nbsp; &nbsp; &nbsp; &nbsp;我们与渣打银行(英国)设计他们的「优秀经理人幸福力计划」(Great Manager Well-being Programme)，开发一个以才能为本的O2O培训APP。</p>
 
             </li><li>
@@ -143,7 +145,7 @@
                 </div>
                 <hr/>
                 <div><img alt="汤森路透"
-                     src="./image/beasystems.png">
+                     src="./image/thomson.png">
                     </div>
                 <p> &nbsp; &nbsp; &nbsp; &nbsp;我们开发企业的内部评估和发展人才优势APP。我们也提供了女性幸福领导计划，让女性可在汤森路透能与我们的心理学家一对一互动解决身心健康问题。</p>
 
@@ -154,7 +156,7 @@
                 </div>
                 <hr/>
                 <div><img alt="联合利华"
-                     src="./image/beasystems.png">
+                     src="./image/unilever.png">
                     </div>
                 <p> &nbsp; &nbsp; &nbsp; &nbsp;我们与联合利华(欧洲丶中国)在众多研究和发展项目上合作，为联合利华提供个性化的定制开发。包括联合利华产品对消费者的活力丶快乐丶幸福感，包括Magnum PQ（快乐商数）在大中华区及欧洲的测试。</p>
 
@@ -198,25 +200,25 @@
 
         <div class="footer_navbar">
             <ul>
-                <li>
+                <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
                         <span class="text">媒体介绍</span>
                     </a>
                 </li>
-                <li>
+                <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
                         <span class="text">联络我们</span>
                     </a>
                 </li>
-                <li>
+                <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
                         <span class="text">在线客服</span>
                     </a>
                 </li>
-                <li>
+                <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
                         <img src="./image/footer.png"/>
                         <span class="text">合作伙伴</span>
